Authors listing link to profile text

--- a/theme/templates/includes/author-preview.html
+++ b/theme/templates/includes/author-preview.html
@@ -17,7 +17,7 @@
                         <tr>
                             <td class="text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></td>
                             <th>HydroShare Profile: </th>
-                            <td><a data-profileurl href="#"></a></td>
+                            <td><a data-profileurl href="#">View Profile</a></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-building" aria-hidden="true"></i></td>
