Minor alignment fixes

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -144,7 +144,7 @@
                             <span>Download</span>
                         </li>
                         <li id="btn-download-zip" data-menu-name="download" data-fb-action="download">
-                            <span class="glyphicon glyphicon-download icon-blue"></span>
+                            <span class="fa fa-download icon-blue"></span>
                             <span>Download Zipped</span>
                         </li>
                     {% endif %}
