--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1469,6 +1469,16 @@ body > .main-container {
 	color: #D9534F;
 }
 
+.custom-btn-toolbar.toolbar-fixed {
+	position: fixed;
+	background-color: #FFF;
+	border: 1px solid #DDD;
+	padding: 10px;
+	border-radius: 4px;
+	z-index: 3;
+	margin-top: -100px;
+}
+
 .custom-btn-toolbar {
     display: flex;
     justify-content: flex-end;
