Minor layout fix for mobile devices

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1711,8 +1711,8 @@ body > .main-container {
 	display: flex;
 }
 
-#citation-text a, .rights-url a{
-    word-break: break-word;
+#citation-text a, .citation-description, .rights-url a {
+	word-break: break-word;
 }
 
 #btn-download-all, #btn-select-irods-file, #rep-res-bag {
