--- a/theme/templates/resource-landing-page/readme-file.html
+++ b/theme/templates/resource-landing-page/readme-file.html
@@ -2,7 +2,10 @@
     <h3>README</h3>
     <div class="readme">
         <div class="readme-header">
-            <h4><i class="fa fa-file-o" aria-hidden="true" style="margin-right: 4px;"></i> {{ readme.file_name }}</h4>
+            <h4>
+                <i class="fa fa-file-o" aria-hidden="true"></i>
+                <span>{{ readme.file_name }}</span>
+            </h4>
         </div>
         <div class="readme-content">{{ readme.content|safe }}</div>
     </div>
