--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -22,7 +22,7 @@
                     {% csrf_token %}
                     <div class="tags">
                         <div id="add-keyword-wrapper" class="input-group">
-                            <input id="txt-keyword" type="text" class="form-control" placeholder="e.g., keyword1, keyword2, keyword3">
+                            <input id="txt-keyword" type="text" class="form-control" placeholder="e.g., Hydrologic_modeling, USU, Land use">
                             <span class="input-group-btn">
                         <a id="btn-add-keyword" class="btn btn-success" type="button">Add</a>
                     </span>
