--- a/theme/templates/resource-landing-page/credits.html
+++ b/theme/templates/resource-landing-page/credits.html
@@ -143,7 +143,7 @@
         </i></p>
 
         {% if contributor_formset.initial|length > 0 %}
-            <table class="hs-table contact-table table">
+            <table class="hs-table contact-table table d-block">
                 <thead>
                 <tr class="header-row">
                     <th>Name</th>
