--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -626,7 +626,7 @@
                                                 <p id="sign-in-name"></p>
                                             </div>
                                             <a id="btn-signout-irods" type="button"
-                                               class="btn btn-default hidden-form">
+                                               class="btn btn-default hidden">
                                                 <span class="glyphicon glyphicon-log-out"></span>
                                                 &nbsp;&nbsp;Log out of iRODS
                                             </a>
