Fixed a bug that disabled zipped download when download agreement was enabled

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4338,6 +4338,7 @@ span.fb-control-square {
 .selection-menu .fa, .selection-menu .glyphicon {
 	font-size: 18px;
 	margin-right: 10px;
+	width: 18px;
 }
 
 div.fb-upload-caption {
