--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -132,39 +132,38 @@
                             <li role="separator" class="divider"></li>
                         {% endif %}
                     {% endif %}
-                    {% if cm.raccess.require_download_agreement %}
-                        <li id="btn-download-with-agreement" data-menu-name="download" data-fb-action="download"
-                            data-toggle="modal" data-target="#license-agree-dialog-file">
-                            <span class="glyphicon glyphicon-download icon-blue"></span>
-                            <span>Download</span>
-                        </li>
-                    {% else %}
-                        <li id="btn-download" data-menu-name="download" data-fb-action="download">
-                            <span class="glyphicon glyphicon-download icon-blue"></span>
-                            <span>Download</span>
-                        </li>
-                        <li id="btn-download-zip" data-menu-name="download" data-fb-action="download">
-                            <span class="fa fa-download icon-blue"></span>
-                            <span>Download Zipped</span>
-                        </li>
-                    {% endif %}
+
+                    <li id="btn-download" data-menu-name="download" data-fb-action="download"
+                            {% if cm.raccess.require_download_agreement %}
+                        data-toggle="modal" data-target="#license-agree-dialog-file"
+                            {% endif %}>
+                        <span class="glyphicon glyphicon-download icon-blue"></span>
+                        <span>Download</span>
+                    </li>
+                    <li data-menu-name="download" data-fb-action="download" data-zipped="true"
+                            {% if cm.raccess.require_download_agreement %}
+                        data-toggle="modal" data-target="#license-agree-dialog-file"
+                            {% endif %}>
+                        <span class="fa fa-download icon-blue"></span>
+                        <span>Download Zipped</span>
+                    </li>
                     <li id="btn-get-link" data-menu-name="get-link"
                         data-fb-action="getLink" data-toggle="modal"
                         data-target="#get-file-url-dialog">
                         <span class="fa fa-link icon-blue"></span>
-                        <span>Get file URL</span>
+                        <span>Get File URL</span>
                     </li>
                     <li role="separator" class="divider"></li>
                     {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
                         <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType" data-toggle="tooltip"
                             title="Add metadata to an individual file" data-placement="right">
                             <i class="fa fa-plus icon-green" aria-hidden="true"></i>
-                            <span>Add metadata to file</span>
+                            <span>Add Metadata</span>
                         </li>
                         <li class="dropdown-submenu submenu-trigger">
                             <span tabindex="-1" class="">
                                 <i class="fa fa-exchange icon-blue" aria-hidden="true"></i>
-                                Convert to
+                                Set Content Type
                                 <span class="caret"></span>
                             </span>
                             <ul class="dropdown-menu">
@@ -209,7 +208,7 @@
                             title="Remove the content type association and delete content-level metadata"
                             data-placement="right">
                             <i class="fa fa-minus-circle btn-remove" aria-hidden="true"></i>
-                            <span>Remove content type</span>
+                            <span>Remove Content Type</span>
                         </li>
                     {%  endif %}
                     {% if relevant_tools %}
@@ -251,7 +250,7 @@
                     </li>
 
                     <li data-menu-name="select-all">
-                        <span class="fa fa-check-square icon-blue"></span>
+                        <span class="fa fa-th-large icon-blue"></span>
                         <span>Select All</span>
                     </li>
                     {% if page.perms.change and metadata_form and cm|resource_type == "CompositeResource"%}
@@ -392,7 +391,7 @@
                                                             data-placement="auto" type="button"
                                                             title='Grid'
                                                             class="btn btn-default active"><i
-                                                            class='glyphicon glyphicon-th-large' aria-hidden='true'></i>
+                                                            class='fa fa-th' aria-hidden='true'></i>
                                                     </button>
                                                 </div>
 
@@ -484,7 +483,7 @@
 
                                                 <button id="fb-select-all"
                                                         title="Select All">
-                                                    <span class="fa fa-check-square icon-blue"></span>
+                                                    <span class="fa fa-th-large icon-blue"></span>
                                                 </button>
 
                                                 <button id="fb-refresh" class="fb-space-right"
@@ -494,8 +493,20 @@
 
                                                 <button id="fb-download"
                                                         class="disabled" data-fb-action="download"
-                                                        title="Download">
+                                                        title="Download"
+                                                        {% if cm.raccess.require_download_agreement %}
+                                                        data-toggle="modal" data-target="#license-agree-dialog-file"
+                                                        {% endif %}>
+
                                                     <span class="glyphicon glyphicon-download icon-blue"></span>
+                                                </button>
+
+                                                <button class="disabled" data-fb-action="download" data-zipped="true"
+                                                        title="Download Zipped"
+                                                        {% if cm.raccess.require_download_agreement %}
+                                                        data-toggle="modal" data-target="#license-agree-dialog-file"
+                                                        {% endif %}>
+                                                    <span class="fa fa-download icon-blue"></span>
                                                 </button>
 
                                                 <button id="fb-get-link" data-toggle="modal" data-fb-action="getLink"
