--- a/theme/static/css/hs-file-icons.css
+++ b/theme/static/css/hs-file-icons.css
@@ -94,7 +94,9 @@
 }
 
 .fb-view-list .fb-stack .fa-file-o {
-	font-size: 18px;
+    font-size: 18px;
+    width: auto;
+    margin-left: 10px;
 }
 
 .fb-view-grid .fb-stack-netcdf .fa-th-large, .dz-details .fb-stack-netcdf .fa-th-large {
@@ -137,6 +139,16 @@
 .fb-view-list .fb-stack-c [data-icon] {
     font-size: 10px;
     top: -3px;
+}
+
+.fb-view-grid .fb-stack-database .fa-database, .dz-details .fb-stack-database .fa-database {
+    top: 6px;
+}
+
+.fb-view-list .fb-stack-database .fa-database {
+    font-size: 8px;
+    top: -3px;
+    left: -2px;
 }
 
 .fb-view-grid .fb-stack-cs [data-icon], .dz-details .fb-stack-cs [data-icon] {
