--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4577,39 +4577,40 @@ span.caption-file-type {
 
 .fb-dropzone-wrapper.fb-collapsed {
     width: 100% !important;
-    max-width: initial
+    max-width: initial;
 }
 
 .ui-resizable-se {
     background-color: #fff;
     margin-right: -1px;
-    background-position: -81px -224px !important
+    background-position: -81px -224px !important;
 }
 
 .ui-resizable-e {
     right: -21px;
     width: 20px;
     top: 30px;
-    height: calc(100% - 30px)
+    height: calc(100% - 30px);
 }
 
 .h-100 {
-    height: 100%
+    height: 100%;
 }
 
-#fileTypeMetaDataTab {
-    overflow: auto;
-    height: 100%;
-    background-color: #FFF
+#fileTypeMetaData {
+	overflow: auto;
+	height: 100%;
+	background-color: #FFF;
+	padding: 15px;
 }
 
 .fb-content-wrapper {
-    display: flex
+    display: flex;
 }
 
 .fb-metadata {
     flex-grow: 1;
-    min-height: 200px
+    height: 200px;
 }
 
 #fb-metadata-helper {
