Metadata content initial layout

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4604,6 +4604,10 @@ span.caption-file-type {
 	padding: 15px;
 }
 
+#fileTypeMetaData .content-block {
+	margin-bottom: 20px;
+}
+
 .fb-content-wrapper {
     display: flex;
 }
