Separator logic for zip menu item

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -115,7 +115,7 @@
                             <span>Delete</span>
                         </li>
 
-                        <li role="separator" class="divider"></li>
+                        <li id="zip-separator" role="separator" class="divider"></li>
 
                         <li id="btn-zip" data-menu-name="zip" data-toggle="modal" data-fb-action="zip"
                             data-target="#zip-folder-dialog">
