--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -49,7 +49,7 @@
                         <input type="hidden" name="label_type" value="OPENWITHAPP">
                         <input type="hidden" name="action" value="DELETE">
                         <button id="btnOpenWithApp" data-toggle="tooltip" data-placement="bottom"
-                                title="Remove WebApp from OpenWith list" data-form-id="form-add-open-with-app"
+                                title="Remove WebApp from 'Open With' list" data-form-id="form-add-open-with-app"
                                 class="glyphicon glyphicon-th icon-button btn-resource-remove"></button>
                     </form>
                 {% else %}
@@ -61,7 +61,7 @@
                         <input type="hidden" name="label_type" value="OPENWITHAPP">
                         <input type="hidden" name="action" value="CREATE">
                         <button id="btnOpenWithApp" data-toggle="tooltip" data-placement="bottom"
-                                title="Add WebApp to OpenWith list" data-form-id="form-add-open-with-app"
+                                title="Add WebApp to 'Open With' list" data-form-id="form-add-open-with-app"
                                 class="glyphicon glyphicon-th icon-button btn-resource-add"></button>
                     </form>
                 {% endif %}
