reference time series metadata layout

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4616,6 +4616,10 @@ span.caption-file-type {
 	margin-bottom: 20px;
 }
 
+#fileTypeMetaData legend {
+	font-size: 18px;
+}
+
 .fb-content-wrapper {
     display: flex;
 }
